objects/Partner_Rebate_Request__c.object
<CustomObject>
    <description>Object to store Partner Rebate requests submitted and track their life cycle.</description>
    <fields>
        <fullName>Channel_Manager_Email__c</fullName>
        <formula>Channel_Manager__r.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Channel Manager Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Channel_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Channel Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Partner_Rebate_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Partner Rebate Requests</relationshipLabel>
        <relationshipName>Partner_Rebate_Requests</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <defaultValue>Today()</defaultValue>
        <label>Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Expense_Type__c</fullName>
        <label>Expense Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>GU</fullName>
                    <default>true</default>
                    <label>GU</label>
                </value>
                <value>
                    <fullName>PS</fullName>
                </value>
                <value>
                    <fullName>Marketing Expense</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Marketing_Expense_Comments__c</fullName>
        <label>Marketing Expense Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Partner_Account_Name__c</fullName>
        <formula>Partner_Account__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Partner Account Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Partner_Account__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Partner Name</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Partner Rebate Requests</relationshipLabel>
        <relationshipName>Partner_Rebate_Requests</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Rebate_Year__c</fullName>
        <label>Rebate Year</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Regional_Channel_Lead_Email__c</fullName>
        <formula>Regional_Channel_Lead__r.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Regional Channel Lead Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Regional_Channel_Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Regional Channel Lead</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Partner_Rebate_Requests1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Regional_Controller_Email__c</fullName>
        <formula>Regional_Controller__r.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Regional Controller Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Regional_Controller__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Regional Controller</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Partner_Rebate_Requests2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Requested_Rebate_Amount__c</fullName>
        <label>Requested Rebate Amount</label>
        <precision>16</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>In-Process</fullName>
                    <default>true</default>
                    <label>In-Process</label>
                </value>
                <value>
                    <fullName>Processed</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Partner Rebate Request</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Partner_Account__c</columns>
        <columns>Channel_Manager__c</columns>
        <columns>Contact__c</columns>
        <columns>Rebate_Year__c</columns>
        <columns>Date__c</columns>
        <columns>Expense_Type__c</columns>
        <columns>Requested_Rebate_Amount__c</columns>
        <columns>Status__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>PRR-{0000}</displayFormat>
        <label>Rebate Request Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Partner Rebate Requests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>